WEEEEEEEEEEEEEEEEEEEEEEEEE Changed Education and Work sections to be more consistent with each other, and added a gap between each entry. Also added a section title for the Skills section, and fixed some z-index issues with the section titles. Reworked to use Json files for the content of the Work, Education, and Skills sections, which should make it easier to update in the future. Also added a new section for the Education section, which is currently empty but can be populated with content in the future. Javascript to audtomatically populate the Work, Education, and Skills sections from the new Json files, and keep counting the number of entries in each section to determine how many cards to create.

--- a/pages/assets/index/index.css
+++ b/pages/assets/index/index.css
@@ -171,6 +171,7 @@ body{
     color: var(--primary-background);
     font-family: "Jura", sans-serif;
     text-transform: uppercase;
+    
 }
 
 .section-title{
@@ -179,7 +180,7 @@ body{
     line-height: 0.8;
     margin: 0;
     padding: 0;
-    z-index: 100;
+    z-index: 1000;
     color: var(--primary-text);
     font-family: "Amiko", sans-serif;
     text-transform: uppercase;
